# ccpm

./: .gitignore  LICENSE  LICENSE.txt  README.md  cmakelists.txt  main.cpp  pyproject.toml  yacpm.py  yacpm.toml  yacpm_cmake.py  yacpm_packages.toml
.github/workflows/: python-publish.yml
example/: CMakeLists.txt  ccpm.toml  main.cpp
src/ccpm/: __main__.py
src/yacpm/: __main__.py
