[project]
name = "ccpm"
version = "0.0.1"

authors = [{ name = "Daniel Brétema", email = "byBretema@gmail.com" }]

description = "Custom Cmake Package Manager - Trying to bring 'npm' and 'pip' vibes to C++ (or any cmake project)"
keywords = ["cmake", "cpp", "c++", "package", "manager", "package-manager"]

readme = "README.md"
license = { file = "LICENSE.txt" }

requires-python = ">=3.8"
dependencies = ["toml"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/byBretema/ccpm.git"

[project.scripts]
ccpm = "ccpm.__main__:main"
